--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "minimum-stability":"dev",
     "require": {
-        "twig/twig:1.*",
+        "twig/twig":"1.*",
         "php": ">=5.4.0"
     }
 }    
